--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <ul style="list-style-type: none;">
       <li style="display:inline"><a href="update_catalog">Update Catalog Manually</a></li>
-      <li style="display:inline"><a href="get_catalog/dsfsd/333">Get Catalog By Producer</a></li>
+      <li style="display:inline"><a href="get_catalog/Weimann-Grady/1">Get Catalog By Producer</a></li>
     </ul>
 
     <h3>Cheetah Homework Assignment</h3>
